--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="mb-3">
             <textarea class="form-control" id="addTxt" rows="3"></textarea>
           </div>
-          <button class="btn btn-primary" id="addBtn">Add Note</button>
+          <button class="btn btn-success" id="addBtn">Add Note</button>
         </div>
       </div>
       <hr />
